--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   
     <title>Englewood Codes on GitHub</title>
     
-    <link rel"=stylesheet" type="text/css" href="style.css>
+    <link rel="stylesheet" type="text/css" href="style.css">
   
   </head>
   
   <body>
   
-    <h1>Englewood Codes on GitHub
+    <h1>Englewood Codes on GitHub</h1>
   
   </body>
 
